resources/cloud/cloud_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-app
  template:
    metadata:
      labels:
        app: cloud-app    
    spec:
      containers:
        - name: cloud-app-container
          image: yxos/cloud
          imagePullPolicy: Always
          ports:
            - containerPort: 6000
              protocol: TCP
      nodeSelector:
          PoP: space_2
