resources/cloud/cloud_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-app-service
spec:
  selector:
    app: cloud-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6000
  type: NodePort
